fix: table display on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,22 +6,22 @@
     color: #88a9e9;
   }
   h1 {
-    @apply text-4xl font-bold my-4;
+    @apply my-4 text-4xl font-bold;
   }
   h2 {
-    @apply text-3xl font-semibold my-3;
+    @apply my-3 text-3xl font-semibold;
   }
   h3 {
-    @apply text-2xl font-medium my-2;
+    @apply my-2 text-2xl font-medium;
   }
   h4 {
-    @apply text-xl font-medium my-2;
+    @apply my-2 text-xl font-medium;
   }
   h5 {
-    @apply text-lg font-medium my-2;
+    @apply my-2 text-lg font-medium;
   }
   h6 {
-    @apply text-base font-medium my-2;
+    @apply my-2 text-base font-medium;
   }
 
   /* Paragraphs and text elements */
@@ -40,10 +40,10 @@
 
   /* Lists */
   ul {
-    @apply list-disc pl-5 my-4;
+    @apply my-4 list-disc pl-5;
   }
   ol {
-    @apply list-decimal pl-5 my-4;
+    @apply my-4 list-decimal pl-5;
   }
   li {
     @apply my-1;
@@ -51,20 +51,20 @@
 
   /* Blockquotes */
   blockquote {
-    @apply border-l-4 border-gray-300 italic pl-4 my-4 text-gray-600;
+    @apply my-4 border-l-4 border-gray-300 pl-4 text-gray-600 italic;
   }
 
   /* Code Blocks */
   pre {
-    @apply bg-[#272727] text-white px-4 rounded-lg overflow-x-auto my-4;
+    @apply my-4 overflow-x-auto rounded-lg bg-[#272727] px-4 text-white;
   }
   code {
-    @apply text-neutral-200 px-1 rounded bg-[#272727];
+    @apply rounded bg-[#272727] px-1 text-neutral-200;
   }
 
   /* Tables */
   table {
-    @apply table-auto border-collapse border bg-[#343434] border-gray-300 w-full my-4;
+    @apply my-4 w-full table-auto border-collapse bg-[#343434];
   }
   th,
   td {
@@ -76,7 +76,7 @@
 
   /* Horizontal Rule */
   hr {
-    @apply border-t border-4 rounded-md border-gray-300 my-6;
+    @apply my-6 rounded-md border-4 border-t border-gray-300;
   }
 
   /* Footnotes */
@@ -91,7 +91,7 @@
 
   /* Images */
   img {
-    @apply max-w-full rounded-lg shadow-md my-4;
+    @apply my-4 max-w-full rounded-lg shadow-md;
   }
 
   /* Custom Elements for Hugo-specific features */
